samples/_failures_safe/1761647636_5ec910_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d9b6624.c: In function ‘main’:
./samples/SAFE/__tmp_8d9b6624.c:172:5: error: expected expression at end of input
  172 |     print_tokens(tokens,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_8d9b6624.c:172:5: error: expected declaration or statement at end of input
